src/qmlcompiler/qqmljsimportvisitor.cpp
@@ -2486,7 +2486,8 @@ bool QQmlJSImportVisitor::visit(UiScriptBinding *scriptBinding)
         leaveEnvironment();
     }
 
-    enterEnvironment(QQmlSA::ScopeType::JSFunctionScope, QStringLiteral("binding"),
+    enterEnvironment(QQmlSA::ScopeType::JSFunctionScope,
+                     signal ? u"changeHandler"_s : u"binding"_s,
                      scriptBinding->statement->firstSourceLocation());
 
     return true;
